--- a/description
+++ b/description
@@ -7,4 +7,5 @@ Author: Milad Niqui
 Email: M.Niqui@cwi.nl
 Homepage: http://homepages.cwi.nl/~milad
 Institution: Centrum Wiskunde & Informatica (CWI)
+Date: October 2008
 License: LGPL
