--- a/description
+++ b/description
@@ -1,11 +1,11 @@
 Name: Coalgebras
 Title: Coalgebras, bisimulation and lambda-coiteration
-Description: This contribution contains a formalisation of coalgebras, bisimulation on coalgebras, weakly final coalgebras and lambda-coiteration definition scheme. The formalisation is modular. The implementation of the module types for streams and potentially infinite Peano numbers are provided using the coinductive types.
+Description: This contribution contains a formalisation of coalgebras, bisimulation on coalgebras, weakly final coalgebras, lambda-coiteration definition scheme (including primitive corecursion) and a version of lambda-bisimulation. The formalisation is modular. The implementation of the module types for streams and potentially infinite Peano numbers are provided using the coinductive types.
 Keywords: coalgebra, bisimulation, weakly final, coiteration, coinductive
 Category: Mathematics/Category Theory
 Author: Milad Niqui
 Email: M.Niqui@cwi.nl
-Homepage: http://homepages.cwi.nl/~milad
+Homepage: http://www.cwi.nl/~milad
 Institution: Centrum Wiskunde & Informatica (CWI)
 Date: October 2008
 License: LGPL
