Standard format for date in file description.

--- a/description
+++ b/description
@@ -7,5 +7,5 @@ Author: Milad Niqui
 Email: M.Niqui@cwi.nl
 Homepage: http://www.cwi.nl/~milad
 Institution: Centrum Wiskunde & Informatica (CWI)
-Date: October 2008
+Date: 2008-10
 License: LGPL
